--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bot"
   ],
   "dependencies": {
-    "node-telegram-bot-api":"^0.27.0",
+    "https": "^1.0.0",
+    "node-telegram-bot-api": "^0.27.0",
     "request": "^2.81.0"
   },
   "author": "FierceDev",
